# mailtutan

./: Cargo.toml  Dockerfile  Dockerfile.arm64  fly.toml
.github/workflows/: release.yml
mailtutan-lib/: Cargo.toml
mailtutan-lib/src/: api.rs  lib.rs  models.rs  smtp.rs  storage.rs
mailtutan-lib/src/models/: message.rs
mailtutan-lib/src/storage/: memdir.rs  memory.rs  smtp_relay.rs
mailtutan/src/: config.rs  main.rs
