[workspace.package]
authors = ["Mohsen Alizadeh <mohsen@alizadeh.us>"]
homepage= "https://github.com/mailtutan/mailtutan"
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["email", "SMTP", "smtp-server", "wasm", "webassembly"]

[profile.release]
opt-level = 'z'
lto = true
strip = true

[workspace]
members = [
  "mailtutan",
  "mailtutan-lib",
]

[workspace.dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
lettre ={ version = "0.11.10", features = ["rustls-tls","smtp-transport", "builder"], default-features = false}

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]